@@ -247,7 +247,7 @@ for i:=0 to 6 do
  MenuItem.OnClick := DeleteAllLabel;
  for i:=1 to maxlabels do begin
     ilabels[i]:=TImage.Create(nil);
-    ilabels[i].parent:=TPanel(AOwner);
+    ilabels[i].parent:=TWinControl(AOwner);
     ilabels[i].tag:=i;
     ilabels[i].Transparent:=True;
     ilabels[i].Font.CharSet:=FCS_ISO_10646_1;
